syntax = "proto3";

option java_package = "com.prac.data.datastore";
option java_multiple_files = true;

message Token {
  string access_token = 1;
  string refresh_token = 2;
  bool is_logged_in = 3 [deprecated = true];
  int32 access_token_expires_in_minute = 4;
  int32 refresh_token_expires_in_minute = 5;
}
